# SV241-indi

./: .gitignore  NEXT_STEPS_MAC.md  README.md  usb_capture.pcapng
.claude/: settings.local.json
docs/: EXTENDED_PROTOCOL.md  INDI_DRIVER_GUIDE.md  PROJECT_SUMMARY.md  REVERSE_ENGINEERING_GUIDE.md  SV241_PROTOCOL.md  USB_CAPTURE_GUIDE.md  _config.yml  index.md
driver/: CMakeLists.txt  README.md  indi_sv241.cpp  indi_sv241.h  indi_sv241.xml  svbony_sv241.h
firmware/: I2C_BUS_LOCKUP_ANALYSIS.md  README.md  SV241_Custom.ino  config.json  extract_esp32_segments.py
firmware/SV241_Extended/: README.md  SV241_Extended.ino
firmware/docs/: FIRMWARE_ANALYSIS.md  GPIO_PIN_MAPPING.md
firmware/ghidra_project/: ExportDecompiled.py  decompiled_functions.c
firmware/ghidra_project/SV241_Project.rep/: project.prp
firmware/ghidra_project/SV241_Project.rep/idata/00/: 00000000.prp  00000001.prp
firmware/ghidra_project/SV241_Project.rep/idata/00/~00000000.db/: db.2.gbf
firmware/ghidra_project/SV241_Project.rep/idata/00/~00000001.db/: db.2.gbf
indi-submission/: SUBMISSION_GUIDE.md  svbony_sv241.cpp
scripts/: analyze_protocol.py  continuous_test.py  long_term_test.sh  reconnect_stress_test.py  stress_test_sensors.py  test_boot.py  test_custom_firmware.py  test_driver.sh  test_extended_firmware.py  test_immediate_read.py
tools/: analyze_protocol.py  extract_strings.py  find_device.py  serial_proxy.py  test_baudrates.py  test_sv241_protocol.py
